--- a/p1/public/index.html
+++ b/p1/public/index.html
@@ -7,12 +7,12 @@
 		<link rel="icon" href="./img/icons/favicon.png" />
 		<title>Project 1</title>
 	</head>
-	<body>
+	<body class="bg-orange-500">
 		<noscript>
-			<strong
-				>We're sorry but doesn't work properly without JavaScript enabled.
-				Please enable it to continue.</strong
-			>
+			<strong>
+				We're sorry but doesn't work properly without JavaScript
+				enabled. Please enable it to continue.
+			</strong>
 		</noscript>
 		<div id="app"></div>
 		<!-- built files will be auto injected -->
